fix: controller structures
