# controllers/auth/schema.go
@@ -1,0 +1,6 @@
+package auth
+
+type FormLogin struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
