# controllers/user/schema.go
@@ -1,0 +1,9 @@
+package user
+
+type FormUser struct {
+	Name        string `json:"name" binding:"required"`
+	Email       string `json:"email" binding:"required"`
+	PhoneNumber string `json:"phoneNumber"`
+	Username    string `json:"username" binding:"required"`
+	Password    string `json:"password" binding:"required"`
+}
